parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALIAS
    ARROBA
    BEGIN
    BOOLEANO
    BREAK
    CASE
    CLASS
    COMILLASDOBLE
    COMILLASIMPLE
    DARROBA
    DO
    DOLAR
    ELSIF
    ENSURE
    FOR
    GUIONBAJO
    ID
    LBRACKET
    LLLAVE
    MODULE
    NEXT
    NIL
    NOT
    RBRACKET
    REDO
    RESCUE
    RETRY
    RLLAVE
    SELF
    SUPER
    THEN
    UNDEF
    UNLES
    UNTIL
    WHEN
    YIELD

Grammar

Rule 0     S' -> sentencias
Rule 1     sentencias -> estructurasControl
Rule 2     sentencias -> declaracion
Rule 3     sentencias -> estructurasControl sentencias
Rule 4     sentencias -> declaracion sentencias
Rule 5     estructurasControl -> estrucIf
Rule 6     estructurasControl -> estrucElse
Rule 7     estructurasControl -> estrucWhile
Rule 8     operadorMat -> IGUAL
Rule 9     operadorMat -> PLUS
Rule 10    operadorMat -> MINUS
Rule 11    operadorMat -> TIMES
Rule 12    operadorLog -> AND
Rule 13    operadorLog -> OR
Rule 14    estrucIf -> IF logica cuerpo END
Rule 15    estrucIf -> IF logica cuerpo estrucElse
Rule 16    logica -> condicion
Rule 17    logica -> condicion operadorLog logica
Rule 18    condicion -> comparador COMPARACION comparador
Rule 19    condicion -> boolean
Rule 20    comparador -> VARIABLE
Rule 21    comparador -> primitivo
Rule 22    estrucElse -> ELSE cuerpo END
Rule 23    estrucElse -> ELSE logica cuerpo END
Rule 24    estrucWhile -> WHILE logica cuerpo END
Rule 25    cuerpo -> declaracion
Rule 26    cuerpo -> declaracion cuerpo
Rule 27    cuerpo -> cuerpo RETURN retornos
Rule 28    retornos -> VARIABLE
Rule 29    retornos -> primitivo
Rule 30    retornos -> expresion
Rule 31    retornos -> asignacion
Rule 32    declaracion -> VARIABLE IGUAL asignacion
Rule 33    declaracion -> VARIABLE IGUAL asignacion declaracion
Rule 34    declaracion -> VARIABLE operadorMat IGUAL opcion
Rule 35    declaracion -> VARIABLE operadorMat IGUAL opcion declaracion
Rule 36    opcion -> VARIABLE
Rule 37    opcion -> NUMBER
Rule 38    declaracion -> DEF VARIABLE LPAREN params RPAREN cuerpo END
Rule 39    params -> rubyParams
Rule 40    params -> rubyParams COMA params
Rule 41    rubyParams -> VARIABLE
Rule 42    rubyParams -> boolean
Rule 43    rubyParams -> NUMBER
Rule 44    asignacion -> primitivo
Rule 45    asignacion -> HASH
Rule 46    asignacion -> ARREGLO
Rule 47    asignacion -> FICHERO
Rule 48    asignacion -> expresion
Rule 49    asignacion -> STRING
Rule 50    expresion -> NUMBER PLUS NUMBER
Rule 51    expresion -> NUMBER MINUS NUMBER
Rule 52    expresion -> termino
Rule 53    termino -> termino TIMES factor
Rule 54    termino -> termino DIVIDE factor
Rule 55    termino -> factor
Rule 56    factor -> NUMBER
Rule 57    factor -> LPAREN expresion RPAREN
Rule 58    primitivo -> NUMBER PUNTO NUMBER
Rule 59    primitivo -> NUMBER
Rule 60    primitivo -> boolean
Rule 61    boolean -> TRUE
Rule 62    boolean -> FALSE

Terminals, with rules where they appear

ALIAS                : 
AND                  : 12
ARREGLO              : 46
ARROBA               : 
BEGIN                : 
BOOLEANO             : 
BREAK                : 
CASE                 : 
CLASS                : 
COMA                 : 40
COMILLASDOBLE        : 
COMILLASIMPLE        : 
COMPARACION          : 18
DARROBA              : 
DEF                  : 38
DIVIDE               : 54
DO                   : 
DOLAR                : 
ELSE                 : 22 23
ELSIF                : 
END                  : 14 22 23 24 38
ENSURE               : 
FALSE                : 62
FICHERO              : 47
FOR                  : 
GUIONBAJO            : 
HASH                 : 45
ID                   : 
IF                   : 14 15
IGUAL                : 8 32 33 34 35
LBRACKET             : 
LLLAVE               : 
LPAREN               : 38 57
MINUS                : 10 51
MODULE               : 
NEXT                 : 
NIL                  : 
NOT                  : 
NUMBER               : 37 43 50 50 51 51 56 58 58 59
OR                   : 13
PLUS                 : 9 50
PUNTO                : 58
RBRACKET             : 
REDO                 : 
RESCUE               : 
RETRY                : 
RETURN               : 27
RLLAVE               : 
RPAREN               : 38 57
SELF                 : 
STRING               : 49
SUPER                : 
THEN                 : 
TIMES                : 11 53
TRUE                 : 61
UNDEF                : 
UNLES                : 
UNTIL                : 
VARIABLE             : 20 28 32 33 34 35 36 38 41
WHEN                 : 
WHILE                : 24
YIELD                : 
error                : 

Nonterminals, with rules where they appear

asignacion           : 31 32 33
boolean              : 19 42 60
comparador           : 18 18
condicion            : 16 17
cuerpo               : 14 15 22 23 24 26 27 38
declaracion          : 2 4 25 26 33 35
estrucElse           : 6 15
estrucIf             : 5
estrucWhile          : 7
estructurasControl   : 1 3
expresion            : 30 48 57
factor               : 53 54 55
logica               : 14 15 17 23 24
opcion               : 34 35
operadorLog          : 17
operadorMat          : 34 35
params               : 38 40
primitivo            : 21 29 44
retornos             : 27
rubyParams           : 39 40
sentencias           : 3 4 0
termino              : 52 53 54

Parsing method: LALR

state 0

    (0) S' -> . sentencias
    (1) sentencias -> . estructurasControl
    (2) sentencias -> . declaracion
    (3) sentencias -> . estructurasControl sentencias
    (4) sentencias -> . declaracion sentencias
    (5) estructurasControl -> . estrucIf
    (6) estructurasControl -> . estrucElse
    (7) estructurasControl -> . estrucWhile
    (32) declaracion -> . VARIABLE IGUAL asignacion
    (33) declaracion -> . VARIABLE IGUAL asignacion declaracion
    (34) declaracion -> . VARIABLE operadorMat IGUAL opcion
    (35) declaracion -> . VARIABLE operadorMat IGUAL opcion declaracion
    (38) declaracion -> . DEF VARIABLE LPAREN params RPAREN cuerpo END
    (14) estrucIf -> . IF logica cuerpo END
    (15) estrucIf -> . IF logica cuerpo estrucElse
    (22) estrucElse -> . ELSE cuerpo END
    (23) estrucElse -> . ELSE logica cuerpo END
    (24) estrucWhile -> . WHILE logica cuerpo END

    VARIABLE        shift and go to state 7
    DEF             shift and go to state 8
    IF              shift and go to state 9
    ELSE            shift and go to state 10
    WHILE           shift and go to state 11

    sentencias                     shift and go to state 1
    estructurasControl             shift and go to state 2
    declaracion                    shift and go to state 3
    estrucIf                       shift and go to state 4
    estrucElse                     shift and go to state 5
    estrucWhile                    shift and go to state 6

state 1

    (0) S' -> sentencias .



state 2

    (1) sentencias -> estructurasControl .
    (3) sentencias -> estructurasControl . sentencias
    (1) sentencias -> . estructurasControl
    (2) sentencias -> . declaracion
    (3) sentencias -> . estructurasControl sentencias
    (4) sentencias -> . declaracion sentencias
    (5) estructurasControl -> . estrucIf
    (6) estructurasControl -> . estrucElse
    (7) estructurasControl -> . estrucWhile
    (32) declaracion -> . VARIABLE IGUAL asignacion
    (33) declaracion -> . VARIABLE IGUAL asignacion declaracion
    (34) declaracion -> . VARIABLE operadorMat IGUAL opcion
    (35) declaracion -> . VARIABLE operadorMat IGUAL opcion declaracion
    (38) declaracion -> . DEF VARIABLE LPAREN params RPAREN cuerpo END
    (14) estrucIf -> . IF logica cuerpo END
    (15) estrucIf -> . IF logica cuerpo estrucElse
    (22) estrucElse -> . ELSE cuerpo END
    (23) estrucElse -> . ELSE logica cuerpo END
    (24) estrucWhile -> . WHILE logica cuerpo END

    $end            reduce using rule 1 (sentencias -> estructurasControl .)
    VARIABLE        shift and go to state 7
    DEF             shift and go to state 8
    IF              shift and go to state 9
    ELSE            shift and go to state 10
    WHILE           shift and go to state 11

    estructurasControl             shift and go to state 2
    sentencias                     shift and go to state 12
    declaracion                    shift and go to state 3
    estrucIf                       shift and go to state 4
    estrucElse                     shift and go to state 5
    estrucWhile                    shift and go to state 6

state 3

    (2) sentencias -> declaracion .
    (4) sentencias -> declaracion . sentencias
    (1) sentencias -> . estructurasControl
    (2) sentencias -> . declaracion
    (3) sentencias -> . estructurasControl sentencias
    (4) sentencias -> . declaracion sentencias
    (5) estructurasControl -> . estrucIf
    (6) estructurasControl -> . estrucElse
    (7) estructurasControl -> . estrucWhile
    (32) declaracion -> . VARIABLE IGUAL asignacion
    (33) declaracion -> . VARIABLE IGUAL asignacion declaracion
    (34) declaracion -> . VARIABLE operadorMat IGUAL opcion
    (35) declaracion -> . VARIABLE operadorMat IGUAL opcion declaracion
    (38) declaracion -> . DEF VARIABLE LPAREN params RPAREN cuerpo END
    (14) estrucIf -> . IF logica cuerpo END
    (15) estrucIf -> . IF logica cuerpo estrucElse
    (22) estrucElse -> . ELSE cuerpo END
    (23) estrucElse -> . ELSE logica cuerpo END
    (24) estrucWhile -> . WHILE logica cuerpo END

    $end            reduce using rule 2 (sentencias -> declaracion .)
    VARIABLE        shift and go to state 7
    DEF             shift and go to state 8
    IF              shift and go to state 9
    ELSE            shift and go to state 10
    WHILE           shift and go to state 11

    declaracion                    shift and go to state 3
    sentencias                     shift and go to state 13
    estructurasControl             shift and go to state 2
    estrucIf                       shift and go to state 4
    estrucElse                     shift and go to state 5
    estrucWhile                    shift and go to state 6

state 4

    (5) estructurasControl -> estrucIf .

    VARIABLE        reduce using rule 5 (estructurasControl -> estrucIf .)
    DEF             reduce using rule 5 (estructurasControl -> estrucIf .)
    IF              reduce using rule 5 (estructurasControl -> estrucIf .)
    ELSE            reduce using rule 5 (estructurasControl -> estrucIf .)
    WHILE           reduce using rule 5 (estructurasControl -> estrucIf .)
    $end            reduce using rule 5 (estructurasControl -> estrucIf .)


state 5

    (6) estructurasControl -> estrucElse .

    VARIABLE        reduce using rule 6 (estructurasControl -> estrucElse .)
    DEF             reduce using rule 6 (estructurasControl -> estrucElse .)
    IF              reduce using rule 6 (estructurasControl -> estrucElse .)
    ELSE            reduce using rule 6 (estructurasControl -> estrucElse .)
    WHILE           reduce using rule 6 (estructurasControl -> estrucElse .)
    $end            reduce using rule 6 (estructurasControl -> estrucElse .)


state 6

    (7) estructurasControl -> estrucWhile .

    VARIABLE        reduce using rule 7 (estructurasControl -> estrucWhile .)
    DEF             reduce using rule 7 (estructurasControl -> estrucWhile .)
    IF              reduce using rule 7 (estructurasControl -> estrucWhile .)
    ELSE            reduce using rule 7 (estructurasControl -> estrucWhile .)
    WHILE           reduce using rule 7 (estructurasControl -> estrucWhile .)
    $end            reduce using rule 7 (estructurasControl -> estrucWhile .)


state 7

    (32) declaracion -> VARIABLE . IGUAL asignacion
    (33) declaracion -> VARIABLE . IGUAL asignacion declaracion
    (34) declaracion -> VARIABLE . operadorMat IGUAL opcion
    (35) declaracion -> VARIABLE . operadorMat IGUAL opcion declaracion
    (8) operadorMat -> . IGUAL
    (9) operadorMat -> . PLUS
    (10) operadorMat -> . MINUS
    (11) operadorMat -> . TIMES

    IGUAL           shift and go to state 14
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18

    operadorMat                    shift and go to state 15

state 8

    (38) declaracion -> DEF . VARIABLE LPAREN params RPAREN cuerpo END

    VARIABLE        shift and go to state 19


state 9

    (14) estrucIf -> IF . logica cuerpo END
    (15) estrucIf -> IF . logica cuerpo estrucElse
    (16) logica -> . condicion
    (17) logica -> . condicion operadorLog logica
    (18) condicion -> . comparador COMPARACION comparador
    (19) condicion -> . boolean
    (20) comparador -> . VARIABLE
    (21) comparador -> . primitivo
    (61) boolean -> . TRUE
    (62) boolean -> . FALSE
    (58) primitivo -> . NUMBER PUNTO NUMBER
    (59) primitivo -> . NUMBER
    (60) primitivo -> . boolean

    VARIABLE        shift and go to state 24
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27
    NUMBER          shift and go to state 28

    logica                         shift and go to state 20
    condicion                      shift and go to state 21
    comparador                     shift and go to state 22
    boolean                        shift and go to state 23
    primitivo                      shift and go to state 25

state 10

    (22) estrucElse -> ELSE . cuerpo END
    (23) estrucElse -> ELSE . logica cuerpo END
    (25) cuerpo -> . declaracion
    (26) cuerpo -> . declaracion cuerpo
    (27) cuerpo -> . cuerpo RETURN retornos
    (16) logica -> . condicion
    (17) logica -> . condicion operadorLog logica
    (32) declaracion -> . VARIABLE IGUAL asignacion
    (33) declaracion -> . VARIABLE IGUAL asignacion declaracion
    (34) declaracion -> . VARIABLE operadorMat IGUAL opcion
    (35) declaracion -> . VARIABLE operadorMat IGUAL opcion declaracion
    (38) declaracion -> . DEF VARIABLE LPAREN params RPAREN cuerpo END
    (18) condicion -> . comparador COMPARACION comparador
    (19) condicion -> . boolean
    (20) comparador -> . VARIABLE
    (21) comparador -> . primitivo
    (61) boolean -> . TRUE
    (62) boolean -> . FALSE
    (58) primitivo -> . NUMBER PUNTO NUMBER
    (59) primitivo -> . NUMBER
    (60) primitivo -> . boolean

    VARIABLE        shift and go to state 32
    DEF             shift and go to state 8
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27
    NUMBER          shift and go to state 28

    cuerpo                         shift and go to state 29
    logica                         shift and go to state 30
    declaracion                    shift and go to state 31
    condicion                      shift and go to state 21
    comparador                     shift and go to state 22
    boolean                        shift and go to state 23
    primitivo                      shift and go to state 25

state 11

    (24) estrucWhile -> WHILE . logica cuerpo END
    (16) logica -> . condicion
    (17) logica -> . condicion operadorLog logica
    (18) condicion -> . comparador COMPARACION comparador
    (19) condicion -> . boolean
    (20) comparador -> . VARIABLE
    (21) comparador -> . primitivo
    (61) boolean -> . TRUE
    (62) boolean -> . FALSE
    (58) primitivo -> . NUMBER PUNTO NUMBER
    (59) primitivo -> . NUMBER
    (60) primitivo -> . boolean

    VARIABLE        shift and go to state 24
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27
    NUMBER          shift and go to state 28

    logica                         shift and go to state 33
    condicion                      shift and go to state 21
    comparador                     shift and go to state 22
    boolean                        shift and go to state 23
    primitivo                      shift and go to state 25

state 12

    (3) sentencias -> estructurasControl sentencias .

    $end            reduce using rule 3 (sentencias -> estructurasControl sentencias .)


state 13

    (4) sentencias -> declaracion sentencias .

    $end            reduce using rule 4 (sentencias -> declaracion sentencias .)


state 14

    (32) declaracion -> VARIABLE IGUAL . asignacion
    (33) declaracion -> VARIABLE IGUAL . asignacion declaracion
    (8) operadorMat -> IGUAL .
    (44) asignacion -> . primitivo
    (45) asignacion -> . HASH
    (46) asignacion -> . ARREGLO
    (47) asignacion -> . FICHERO
    (48) asignacion -> . expresion
    (49) asignacion -> . STRING
    (58) primitivo -> . NUMBER PUNTO NUMBER
    (59) primitivo -> . NUMBER
    (60) primitivo -> . boolean
    (50) expresion -> . NUMBER PLUS NUMBER
    (51) expresion -> . NUMBER MINUS NUMBER
    (52) expresion -> . termino
    (61) boolean -> . TRUE
    (62) boolean -> . FALSE
    (53) termino -> . termino TIMES factor
    (54) termino -> . termino DIVIDE factor
    (55) termino -> . factor
    (56) factor -> . NUMBER
    (57) factor -> . LPAREN expresion RPAREN

    IGUAL           reduce using rule 8 (operadorMat -> IGUAL .)
    HASH            shift and go to state 36
    ARREGLO         shift and go to state 37
    FICHERO         shift and go to state 38
    STRING          shift and go to state 40
    NUMBER          shift and go to state 41
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27
    LPAREN          shift and go to state 45

    asignacion                     shift and go to state 34
    primitivo                      shift and go to state 35
    expresion                      shift and go to state 39
    boolean                        shift and go to state 42
    termino                        shift and go to state 43
    factor                         shift and go to state 44

state 15

    (34) declaracion -> VARIABLE operadorMat . IGUAL opcion
    (35) declaracion -> VARIABLE operadorMat . IGUAL opcion declaracion

    IGUAL           shift and go to state 46


state 16

    (9) operadorMat -> PLUS .

    IGUAL           reduce using rule 9 (operadorMat -> PLUS .)


state 17

    (10) operadorMat -> MINUS .

    IGUAL           reduce using rule 10 (operadorMat -> MINUS .)


state 18

    (11) operadorMat -> TIMES .

    IGUAL           reduce using rule 11 (operadorMat -> TIMES .)


state 19

    (38) declaracion -> DEF VARIABLE . LPAREN params RPAREN cuerpo END

    LPAREN          shift and go to state 47


state 20

    (14) estrucIf -> IF logica . cuerpo END
    (15) estrucIf -> IF logica . cuerpo estrucElse
    (25) cuerpo -> . declaracion
    (26) cuerpo -> . declaracion cuerpo
    (27) cuerpo -> . cuerpo RETURN retornos
    (32) declaracion -> . VARIABLE IGUAL asignacion
    (33) declaracion -> . VARIABLE IGUAL asignacion declaracion
    (34) declaracion -> . VARIABLE operadorMat IGUAL opcion
    (35) declaracion -> . VARIABLE operadorMat IGUAL opcion declaracion
    (38) declaracion -> . DEF VARIABLE LPAREN params RPAREN cuerpo END

    VARIABLE        shift and go to state 7
    DEF             shift and go to state 8

    cuerpo                         shift and go to state 48
    declaracion                    shift and go to state 31

state 21

    (16) logica -> condicion .
    (17) logica -> condicion . operadorLog logica
    (12) operadorLog -> . AND
    (13) operadorLog -> . OR

    VARIABLE        reduce using rule 16 (logica -> condicion .)
    DEF             reduce using rule 16 (logica -> condicion .)
    AND             shift and go to state 50
    OR              shift and go to state 51

    operadorLog                    shift and go to state 49

state 22

    (18) condicion -> comparador . COMPARACION comparador

    COMPARACION     shift and go to state 52


state 23

    (19) condicion -> boolean .
    (60) primitivo -> boolean .

    AND             reduce using rule 19 (condicion -> boolean .)
    OR              reduce using rule 19 (condicion -> boolean .)
    VARIABLE        reduce using rule 19 (condicion -> boolean .)
    DEF             reduce using rule 19 (condicion -> boolean .)
    COMPARACION     reduce using rule 60 (primitivo -> boolean .)


state 24

    (20) comparador -> VARIABLE .

    COMPARACION     reduce using rule 20 (comparador -> VARIABLE .)
    AND             reduce using rule 20 (comparador -> VARIABLE .)
    OR              reduce using rule 20 (comparador -> VARIABLE .)
    VARIABLE        reduce using rule 20 (comparador -> VARIABLE .)
    DEF             reduce using rule 20 (comparador -> VARIABLE .)


state 25

    (21) comparador -> primitivo .

    COMPARACION     reduce using rule 21 (comparador -> primitivo .)
    AND             reduce using rule 21 (comparador -> primitivo .)
    OR              reduce using rule 21 (comparador -> primitivo .)
    VARIABLE        reduce using rule 21 (comparador -> primitivo .)
    DEF             reduce using rule 21 (comparador -> primitivo .)


state 26

    (61) boolean -> TRUE .

    AND             reduce using rule 61 (boolean -> TRUE .)
    OR              reduce using rule 61 (boolean -> TRUE .)
    VARIABLE        reduce using rule 61 (boolean -> TRUE .)
    DEF             reduce using rule 61 (boolean -> TRUE .)
    COMPARACION     reduce using rule 61 (boolean -> TRUE .)
    IF              reduce using rule 61 (boolean -> TRUE .)
    ELSE            reduce using rule 61 (boolean -> TRUE .)
    WHILE           reduce using rule 61 (boolean -> TRUE .)
    $end            reduce using rule 61 (boolean -> TRUE .)
    END             reduce using rule 61 (boolean -> TRUE .)
    RETURN          reduce using rule 61 (boolean -> TRUE .)
    COMA            reduce using rule 61 (boolean -> TRUE .)
    RPAREN          reduce using rule 61 (boolean -> TRUE .)


state 27

    (62) boolean -> FALSE .

    AND             reduce using rule 62 (boolean -> FALSE .)
    OR              reduce using rule 62 (boolean -> FALSE .)
    VARIABLE        reduce using rule 62 (boolean -> FALSE .)
    DEF             reduce using rule 62 (boolean -> FALSE .)
    COMPARACION     reduce using rule 62 (boolean -> FALSE .)
    IF              reduce using rule 62 (boolean -> FALSE .)
    ELSE            reduce using rule 62 (boolean -> FALSE .)
    WHILE           reduce using rule 62 (boolean -> FALSE .)
    $end            reduce using rule 62 (boolean -> FALSE .)
    END             reduce using rule 62 (boolean -> FALSE .)
    RETURN          reduce using rule 62 (boolean -> FALSE .)
    COMA            reduce using rule 62 (boolean -> FALSE .)
    RPAREN          reduce using rule 62 (boolean -> FALSE .)


state 28

    (58) primitivo -> NUMBER . PUNTO NUMBER
    (59) primitivo -> NUMBER .

    PUNTO           shift and go to state 53
    COMPARACION     reduce using rule 59 (primitivo -> NUMBER .)
    AND             reduce using rule 59 (primitivo -> NUMBER .)
    OR              reduce using rule 59 (primitivo -> NUMBER .)
    VARIABLE        reduce using rule 59 (primitivo -> NUMBER .)
    DEF             reduce using rule 59 (primitivo -> NUMBER .)


state 29

    (22) estrucElse -> ELSE cuerpo . END
    (27) cuerpo -> cuerpo . RETURN retornos

    END             shift and go to state 54
    RETURN          shift and go to state 55


state 30

    (23) estrucElse -> ELSE logica . cuerpo END
    (25) cuerpo -> . declaracion
    (26) cuerpo -> . declaracion cuerpo
    (27) cuerpo -> . cuerpo RETURN retornos
    (32) declaracion -> . VARIABLE IGUAL asignacion
    (33) declaracion -> . VARIABLE IGUAL asignacion declaracion
    (34) declaracion -> . VARIABLE operadorMat IGUAL opcion
    (35) declaracion -> . VARIABLE operadorMat IGUAL opcion declaracion
    (38) declaracion -> . DEF VARIABLE LPAREN params RPAREN cuerpo END

    VARIABLE        shift and go to state 7
    DEF             shift and go to state 8

    cuerpo                         shift and go to state 56
    declaracion                    shift and go to state 31

state 31

    (25) cuerpo -> declaracion .
    (26) cuerpo -> declaracion . cuerpo
    (25) cuerpo -> . declaracion
    (26) cuerpo -> . declaracion cuerpo
    (27) cuerpo -> . cuerpo RETURN retornos
    (32) declaracion -> . VARIABLE IGUAL asignacion
    (33) declaracion -> . VARIABLE IGUAL asignacion declaracion
    (34) declaracion -> . VARIABLE operadorMat IGUAL opcion
    (35) declaracion -> . VARIABLE operadorMat IGUAL opcion declaracion
    (38) declaracion -> . DEF VARIABLE LPAREN params RPAREN cuerpo END

    END             reduce using rule 25 (cuerpo -> declaracion .)
    RETURN          reduce using rule 25 (cuerpo -> declaracion .)
    ELSE            reduce using rule 25 (cuerpo -> declaracion .)
    VARIABLE        shift and go to state 7
    DEF             shift and go to state 8

    declaracion                    shift and go to state 31
    cuerpo                         shift and go to state 57

state 32

    (32) declaracion -> VARIABLE . IGUAL asignacion
    (33) declaracion -> VARIABLE . IGUAL asignacion declaracion
    (34) declaracion -> VARIABLE . operadorMat IGUAL opcion
    (35) declaracion -> VARIABLE . operadorMat IGUAL opcion declaracion
    (20) comparador -> VARIABLE .
    (8) operadorMat -> . IGUAL
    (9) operadorMat -> . PLUS
    (10) operadorMat -> . MINUS
    (11) operadorMat -> . TIMES

    IGUAL           shift and go to state 14
    COMPARACION     reduce using rule 20 (comparador -> VARIABLE .)
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18

    operadorMat                    shift and go to state 15

state 33

    (24) estrucWhile -> WHILE logica . cuerpo END
    (25) cuerpo -> . declaracion
    (26) cuerpo -> . declaracion cuerpo
    (27) cuerpo -> . cuerpo RETURN retornos
    (32) declaracion -> . VARIABLE IGUAL asignacion
    (33) declaracion -> . VARIABLE IGUAL asignacion declaracion
    (34) declaracion -> . VARIABLE operadorMat IGUAL opcion
    (35) declaracion -> . VARIABLE operadorMat IGUAL opcion declaracion
    (38) declaracion -> . DEF VARIABLE LPAREN params RPAREN cuerpo END

    VARIABLE        shift and go to state 7
    DEF             shift and go to state 8

    cuerpo                         shift and go to state 58
    declaracion                    shift and go to state 31

state 34

    (32) declaracion -> VARIABLE IGUAL asignacion .
    (33) declaracion -> VARIABLE IGUAL asignacion . declaracion
    (32) declaracion -> . VARIABLE IGUAL asignacion
    (33) declaracion -> . VARIABLE IGUAL asignacion declaracion
    (34) declaracion -> . VARIABLE operadorMat IGUAL opcion
    (35) declaracion -> . VARIABLE operadorMat IGUAL opcion declaracion
    (38) declaracion -> . DEF VARIABLE LPAREN params RPAREN cuerpo END

  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for DEF resolved as shift
    IF              reduce using rule 32 (declaracion -> VARIABLE IGUAL asignacion .)
    ELSE            reduce using rule 32 (declaracion -> VARIABLE IGUAL asignacion .)
    WHILE           reduce using rule 32 (declaracion -> VARIABLE IGUAL asignacion .)
    $end            reduce using rule 32 (declaracion -> VARIABLE IGUAL asignacion .)
    END             reduce using rule 32 (declaracion -> VARIABLE IGUAL asignacion .)
    RETURN          reduce using rule 32 (declaracion -> VARIABLE IGUAL asignacion .)
    VARIABLE        shift and go to state 7
    DEF             shift and go to state 8
